[fix] URI を変更
